feat: Add plugins/garden-cli

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "rynkowsg/asdf-clj-kondo"]
 	path = plugins/clj-kondo
 	url = git@github.com:rynkowsg/asdf-clj-kondo.git
+[submodule "rynkowsg/asdf-garden-cli"]
+	path = plugins/garden-cli
+	url = git@github.com:rynkowsg/asdf-garden-cli.git
 [submodule "rynkowsg/asdf-opentofu"]
 	path = plugins/opentofu
 	url = git@github.com:rynkowsg/asdf-opentofu.git
